fixed css for if an email on dropdown is too long

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -130,7 +130,7 @@
     font-family: 'Lato';
     list-style: none;
     padding-left: 0px;
-    width: 150px;
+    /* width: 150px; */
     display: flex;
     flex-wrap:wrap;
     align-items: baseline;
